--- a/site/layouts/_default/list.html
+++ b/site/layouts/_default/list.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
     <body>
-        <div class="content-wrapper">
-            <div class="content-wrapper__inner">
+        <div class="w-100">
+            <div class="measure-wide">
                 {{ range .Data.Pages.GroupByDate "2006" }}
                 <h2>{{ .Key }}</h2>
                 <ul id="list">
