--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -7,12 +7,12 @@
 
     <!-- Enable responsiveness on mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title> {{ .Title }} &middot; {{ .Site.Title }} </title>
+    <title> {{ .Title }} | {{ .Site.Title }} </title>
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!--Styles'n'Scripts -->
-    <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}/css/base.css" />
+    <!-- Tachyons.io -->
+    <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}/css/tachyons.min.css" />
 </head>
