--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,5 +1,5 @@
 {{ partial "header.html" . }}
-<body class="home-template">
+<body class="w-100">
 
     <!-- The big featured header on the homepage, with the site logo and description -->
     <header id="site-head" {{ if .Site.Params.cover }}style="background-image: url({{ .Site.Params.cover }})"{{ end }}>
@@ -7,9 +7,9 @@
             <div id="site-head-content" class="inner">
 
                 {{ if .Site.Params.logo }} <a id="blog-logo" href="{{ .Site.BaseURL }}"><img src="{{ .Site.Params.logo }}" alt="Blog Logo" /></a>{{ end }}
-                <h1 class="blog-title">{{ .Site.Title}}</h1>
-                {{ if .Site.Params.description }}<h2 class="blog-description">{{ .Site.Params.description }}</h2> {{ else  }}
-                <h2 class="blog-description">Power puff girls</h2>
+                <h1 class="f1">{{ .Site.Title}}</h1>
+                {{ if .Site.Params.description }}<h2 class="f2">{{ .Site.Params.description }}</h2> {{ else  }}
+                <h2 class="f2">Tachyons.io</h2>
                 {{ end }}
 
                 <a class=''>Take a tour</a>
@@ -20,7 +20,7 @@
     </header>
 
     <main class="content" role="main">
-    <div class='fixed-nav'>
+    <div class='fixed bg-dark-red'>
     </div>
         {{ range .Data.Pages.ByWeight }}
                 {{ if eq .Type  "post" }}
