--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,5 +1,5 @@
 {{ partial "header.html" . }}
-<body class="w-100">
+<body class="system-sans-serif w-100">
 
     <!-- The big featured header on the homepage, with the site logo and description -->
     <header id="site-head" {{ if .Site.Params.cover }}style="background-image: url({{ .Site.Params.cover }})"{{ end }}>
