--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -2,17 +2,27 @@
 <html>
 <head>
     <!-- Document Settings -->
-    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <!-- Enable responsiveness on mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title> {{ .Title }} | {{ .Site.Title }} </title>
+    <title>{{ .Title }} | {{ .Site.Title }}</title>
+		<meta name="description" content="{{ .Params.description }}"> 
 
-    <meta name="HandheldFriendly" content="True" />
-    <meta name="MobileOptimized" content="320" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="{{ .Site.Title }}">
 
     <!-- Tachyons.io -->
-    <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}/css/tachyons.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/tachyons.min.css" />
 </head>
+
+
+
+
+
+
+
+
+
