--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- Document Settings -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <!-- Document Settings -->
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>{{ .Title }} | {{ .Site.Title }}</title>
+	<meta name="description" content="{{ .Params.description }}"> 
+	
+	<!-- Favicons -->
+	<link rel="apple-touch-icon" href="favicon.png">
+	<link rel="icon" type="image/png" href="favicon.png">
 
-    <!-- Enable responsiveness on mobile devices-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>{{ .Title }} | {{ .Site.Title }}</title>
-		<meta name="description" content="{{ .Params.description }}"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--link rel="manifest" href="/manifest.json"-->
+  <!--link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#ff4400"-->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-title" content="{{ .Site.Title }}">
+  <meta name="theme-color" content="#000">
+  
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="{{ .Site.Title }}">
-
-    <!-- Tachyons.io -->
-    <link rel="stylesheet" type="text/css" href="css/tachyons.min.css" />
+  <!-- Tachyons.io -->
+  <link rel="stylesheet" type="text/css" href="css/tachyons.min.css" />
 </head>
+
+
 
 
 
