--- a/site/layouts/_default/list.html
+++ b/site/layouts/_default/list.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" . }}
     <body>
-        <div class="w-100">
+        <div class="bg-red">
             <div class="measure-wide">
                 {{ range .Data.Pages.GroupByDate "2006" }}
                 <h2>{{ .Key }}</h2>
