--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -23,6 +23,8 @@
 
   <!-- Tachyons.io -->
   <link rel="stylesheet" type="text/css" href="css/tachyons.min.css" />
+  <link rel="stylesheet" type="text/css" href="source_sans.css" />  
+  
 </head>
 
 
