--- a/site/layouts/post/post.html
+++ b/site/layouts/post/post.html
@@ -1,35 +1,61 @@
-<div class='post-holder'>
-{{ if .Params.class }}
+<li class='post-holder'>
+	<span class="metaTag dn">
+	<!--Meta-->
+	</span>
+
+<!--{{ if .Params.class }}
 <article class="{{ .Params.class }}">
 {{ else }}
-<article class="post">
-{{ end }}
+<article class="mt5">
+{{ end }}-->
 
-    <header class="post-header">
-        <a id="blog-logo" href="{{ .Site.BaseURL}}">
-            {{ if .Site.Params.logo }}
-                <a id="blog-logo" href="{{ .Site.BaseURL}}"><img src="{{ .Site.Params.logo }}" alt="Blog Logo" /></a>
-            {{else}}
-                {{ .Site.Title }}
-            {{ end }}
-        </a>
-    </header>
-    <h1 class="post-title">{{ .Title }}</h1>
+<article class="mt5" id="">
+	<section class="cf w-100 pv3 f4 ph3 ph4-ns">
+		<div class="mw9 center ph3-ns">
+		  <div class="ph2-ns">
+		    <div class="fl w-100 w-70-ns pr4"><!-- w-two-thirds -->
+		      <div class="pv4 fr w-100 w-90-m w-80-l"><!-- outline bg-black-05 truncate no-wrap -->
+		      	<a href="{{ .Permalink }}" class="no-underline dim db">
+		      		<img src="images/url.svg" class="pr3 h07" alt="Link"><time class="f6 ttu tracked gray source_sans_prolight">{{ .Title }}<!--{{ if .GetParam "draft"}}DRAFT{{end}}{{ .Date.Format "Mon, Jan 2, 2006" }}--></time></a>
+	    			<hr class="ba bw1 mb0 b--black-10"/>
+		      	<details class="details"><!-- open -->
+		      		<summary class="list">
+		      			<header class="fl w-100 pr4-ns">
+		      				<!--a id="blog-logo" href="{{ .Site.BaseURL}}">
+		      				    {{ if .Site.Params.logo }}
+		      				        <a id="blog-logo" href="{{ .Site.BaseURL}}"><img src="{{ .Site.Params.logo }}" alt="Blog Logo" /></a>
+		      				    {{else}}
+		      				        {{ .Site.Title }}
+		      				    {{ end }}
+		      				</a-->
+		      				<h1 class="f2 lh-title fw9 mb3 pt0">
+		      					<span class="source_sans_probold">{{ .Title }}</span>
+		      				</h1>
+		      				<h2 class="f3 mid-gray lh-title">
+		      				  <span class="source_sans_probold">{{ .Title }}</span>
+		      				</h2>
+		      			</header>
+		      			<p class="f4-ns mt0-ns">
+		      					<span class="source_sans_prosemibold">{{ .Title }}</span>
+		      				</p>
+      				</summary>
+					    {{ .Content }}
 
-    <section class="post-content">
-    {{ .Content }}
-    </section>
-
-    <footer class="post-footer">
-
-    {{ if .Site.Author }}
-        <section class="author">
-            <h4>{{ .Site.Author.name}}</h4>
-            <p>{{ .Site.Author.bio }}</p>
-        </section>
-    {{ end }}
-
-    </footer>
+					    <!--footer class="post-footer">
+					
+					    {{ if .Site.Author }}
+					        <section class="author">
+					            <h4>{{ .Site.Author.name}}</h4>
+					            <p>{{ .Site.Author.bio }}</p>
+					        </section>
+					    {{ end }}
+					
+					    </footer-->
+	      		</details>
+	       </div><!-- /fr outline -->
+      </div><!-- /w-two-thirds -->
+    </div><!-- /ph2-ns -->
+  </div><!-- /mw9 center ph3-ns -->
+	</section><!-- /cf w-100 pv3 f4 ph3 ph4-ns --> 
 </article>
-</div>
-<div class='post-after'></div>
+</li>
