--- a/site/layouts/post/post.html
+++ b/site/layouts/post/post.html
@@ -1,6 +1,7 @@
 <li class='post-holder'>
 	<span class="metaTag dn">
-	<!--Meta-->
+		{{ .Title }}
+		{{ .Content }}
 	</span>
 
 <!--{{ if .Params.class }}
