--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -5,7 +5,11 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{ .Title }} | {{ .Site.Title }}</title>
+  
+  <!--TODO: SUBTITLE -->
+  <!--<title>Scott Phillips | Graphic Designer &amp; Coder</title>-->
+  
+  <title>{{ .Site.Title }} | {{ .Title }}</title>
 	<meta name="description" content="{{ .Params.description }}"> 
 	
 	<!-- Favicons -->
@@ -23,7 +27,66 @@
 
   <!-- Tachyons.io -->
   <link rel="stylesheet" type="text/css" href="css/tachyons.min.css" />
-  <link rel="stylesheet" type="text/css" href="css/source_sans.css" />  
+  <link rel="stylesheet" type="text/css" href="css/source_sans.css" />
+  
+  
+  <!--TODO: TEMPLATE CSS -->
+  <style>
+  /*.carousel {
+    background: #FAFAFA;
+  }
+  .carousel-cell {
+    
+    width: 100%;
+    height: auto;
+    /*
+    margin-right: 10px;
+    *!/
+    background: #333;
+  }
+  .carousel-cell-image {
+    display: block;
+    max-height: 100%;
+    margin: 0 auto;
+    max-width: 100%;
+    opacity: 0;
+    -webkit-transition: opacity 0.4s;
+            transition: opacity 0.4s;
+  }
+  
+  /* fade in lazy loaded image *!/
+  .carousel-cell-image.flickity-lazyloaded,
+  .carousel-cell-image.flickity-lazyerror {
+    opacity: 1;
+  }*/
+  
+  .near-white {
+  	color:#f8f8f8;
+  } 
+  .b--near-white {
+  	border-color:#f8f8f8;
+  }
+  .bg-near-white {
+  	background-color:#f8f8f8;
+  }
+  
+  </style>
+  
+  <style>
+  	.no-select{pointer-events:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-o-user-select:none;user-select:none;-webkit-tap-highlight-color:rgba(0,0,0,0);-webkit-tap-highlight-color:transparent;-webkit-touch-callout:none;-webkit-text-size-adjust:none;-webkit-tap-highlight-color:rgba(0,0,0,0);-ms-touch-action:none}*:focus{outline:none}*::selection,::selection{color:inherit;background:transparent}*::-moz-selection,::-moz-selection{color:inherit;background:transparent}.highlight *::selection,.highlight::selection{color:white;background:#666}.highlight *::-moz-selection,.highlight::-moz-selection{color:white;background:#666}details{}.no-highlight,summary{-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-o-user-select:none;user-select:none;-webkit-tap-highlight-color:transparent;-webkit-touch-callout:none;-webkit-text-size-adjust:none}summary{width:100%;cursor:pointer}summary::after{content:'Read more…\2003';display:inline-block;min-width:8rem;margin:1.6rem 0 2rem;padding:1rem 0;background:var(--dim-cta);color:white;-webkit-letter-spacing:0.2rem;-moz-letter-spacing:0.2rem;-ms-letter-spacing:0.2rem;letter-spacing:0.2rem;border:2px solid var(--dim-cta);border-radius:0;font-size:0.7rem;text-align:right;-webkit-text-decoration:none;text-decoration:none;font-weight:500;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-transition:all 0.4s ease 0s;transition:all 0.4s ease 0s;text-transform:uppercase}summary:hover:after{background:none;border-color:var(--lit-cta);background:var(--lit-cta)}details[open] > summary:after{content:'Read less…\2003';background:none;color:var(--dim-cta)}details[open] > summary:hover:after{border-color:var(--lit-cta);background:var(--lit-cta);color:white}summary::-webkit-details-marker{display:none}details[open] summary ~ *{animation:fade 0.666s ease-in-out 0s}@keyframes fade{0%{opacity:0}100%{opacity:1}}.overlay-footer{bottom:0;width:100%;height:48px;line-height:48px;padding:0;position:fixed;z-index:10}div#overlay-icon{position:fixed;z-index:9;width:100%;-moz-transform:translate3d(0,0,0);-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0);-moz-transition:-moz-transform 0.28s;-webkit-transition:-webkit-transform 0.28s;transition:transform 0.28s}input[type='checkbox']#togglebox{position:fixed;left:0;top:0;visibility:hidden}label#navtoggler{position:fixed;z-index:999999;right:0;bottom:0;width:56px;height:56px;background:black;cursor:pointer}.home-menu{width:60px;height:64px;background:url("images/home-menu.svg") no-repeat 8px 8px transparent;background-size:74%;display:inline-block;-webkit-transform-origin:50% 50%;-moz-transform-origin:50% 50%;-o-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-transition-duration:0.25s;transition-duration:0.25s;-webkit-transition-property:-webkit-transform;transition-property:-webkit-transform;transition-property:transform;transition-property:transform, -webkit-transform;-webkit-transition-delay:0.10s;-moz-transition-delay:0.10s;transition-delay:0.10s;-webkit-transform:rotate(-90deg);transform:rotate(-90deg)}#home-menu-hitarea{display:block;width:60px;height:62px;position:fixed;z-index:999;bottom:34px;right:0;cursor:pointer}#togglebox:checked + label > .home-menu{-webkit-transform:rotate(-0deg);transform:rotate(-0deg)}nav#offcanvas-menu{-moz-transform:translate3d(13em,0,0);-webkit-transform:translate3d(13em,0,0);transform:translate3d(13em,0,0);height:100%;top:0;right:0;z-index:8;display:block;position:fixed;overflow-x:hidden;overflow-y:scroll;backface-visibility:hidden;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;-moz-transition:-moz-transform 0.38s cubic-bezier(0.28, 0, 0.8, 0.99), visibility 0s 0.28s;-webkit-transition:-webkit-transform 0.38s cubic-bezier(0.28, 0, 0.8, 0.99), visibility 0s 0.28s;transition:transform 0.38s cubic-bezier(0.28, 0, 0.8, 0.99), visibility 0s 0.28s}div.overlay{position:fixed;width:100%;height:100%;left:0;top:0;z-index:1;visibility:hidden}div.overlay label{width:100%;height:100%;position:fixed;-webkit-tap-highlight-color:rgba(0,0,0,0);-webkit-tap-highlight-color:transparent;-webkit-touch-callout:none;-webkit-text-size-adjust:none;-webkit-tap-highlight-color:rgba(0,0,0,0);-webkit-user-select:none;-ms-touch-action:none}input[type='checkbox']#togglebox:checked ~ div#overlay-icon{}input[type='checkbox']#togglebox:checked ~ nav#offcanvas-menu{-moz-transform:all 0.4s;-webkit-transform:all 0.4s;transform:all 0.4s;-moz-transform:translate3d(0,0,0);-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0);visibility:visible;-moz-transition-delay:0s;-webkit-transition-delay:0s;transition-delay:0s}input[type='checkbox']#togglebox:checked ~ nav#offcanvas-menu ul{opacity:1}input[type='checkbox']#togglebox:checked ~ div.overlay{visibility:visible}.overflow{height:12rem}@media (max-width:480px){nav#offcanvas-menu.debug{background-color:red}nav#offcanvas-menu{width:66vw;-moz-transform:translate3d(66vw,0,0);-webkit-transform:translate3d(66vw,0,0);transform:translate3d(66vw,0,0);background-color:white}input[type='checkbox']#togglebox:checked ~ nav#offcanvas-menu{width:66vw}div.overlay{display:block}}@media (min-width:481px){nav#offcanvas-menu.debug{background-color:skyblue}nav#offcanvas-menu{width:33vw;-moz-transform:translate3d(33vw,0,0);-webkit-transform:translate3d(33vw,0,0);transform:translate3d(33vw,0,0)}input[type='checkbox']#togglebox:checked ~ nav#offcanvas-menu{width:33vw}div.overlay{display:none}}@media (min-width:960px){nav#offcanvas-menu.debug{background-color:cyan}}.bg-animate{color:rgba(170, 170, 170, 1);transition:color 2s ease-out}.bg-animate:hover{color:rgba(38, 38, 38, 1)}:root{--tint-fg:darkgrey;--tint-bg:white;--dim-cta:darkgrey;--lit-cta:gainsboro}.tint-bg{background-color:var(--tint-bg)}.tint-fg{color:var(--tint-fg);fill:var(--tint-fg)}.dim-cta{color:var(--dim-cta);fill:var(--dim-cta)}.lit-cta{color:var(--lit-cta);fill:var(--lit-cta)}.hover-bg-gray{transition:all 1s ease-out}#searchEntry{transition:opacity 1s ease}#searchEntry:focus,#searchEntry:hover{opacity:1}input:-webkit-autofill{-webkit-box-shadow:0 0 0 99rem #f8f8f8 inset}.h07{height: 0.7rem;}
+  </style>
+  
+  <!--TODO: CREATE PARTIAL-->
+  <svg class="dn">
+  <defs>
+  <g id=home>
+  <path d="M-261.2 296.9c2.7 0 4.9 2.2 4.9 4.9v38.1c0 2.7-2.2 4.9-4.9 4.9s-4.9-2.2-4.9-4.9v-38.1c0-2.7 2.2-4.9 4.9-4.9zM-295.9 236.7l-38.5 38.5c-1.9 1.9-1.9 5 0 7 1.9 1.9 5 1.9 7 0l31.5-31.5c1.9-1.9 5-1.9 7 0l31.5 31.5c1.9 1.9 5 1.9 7 0 1.9-1.9 1.9-5 0-7l-38.5-38.5c-1.9-1.9-5-1.9-7 0zM-323 296.9c2.7 0 4.9 2.2 4.9 4.9v38.1c0 2.7-2.2 4.9-4.9 4.9s-4.9-2.2-4.9-4.9v-38.1c0-2.7 2.2-4.9 4.9-4.9zM-292 309.8c2.7 0 4.9 2.2 4.9 4.9v25.1c0 2.7-2.2 4.9-4.9 4.9s-4.9-2.2-4.9-4.9v-25.1c-.1-2.7 2.1-4.9 4.9-4.9z"/>
+  </g>
+  <g id=logo>
+  	<path d="m733 289q8 6 8 18v406q0 10-6 16t-17 7h-231q-10 0-17-7t-7-16v-255q0-10-6-17t-17-6h-139q-10 0-16 6t-7 17v255q0 10-6 16t-17 7h-232q-10 0-16-7t-7-16v-406q0-12 9-18l347-282q15-12 29 0z"/>
+  </g>
+  </defs>
+  </svg>
   
 </head>
 
