--- a/site/themes/ga-hugo-theme/layouts/_default/single.html
+++ b/site/themes/ga-hugo-theme/layouts/_default/single.html
@@ -22,9 +22,12 @@
           
           <hr />
           <!--<code style="">{{if .Params.road}}road: {{.Params.road}}{{end}}</code>-->
-          <code style="">{{if .Params.district}}district: {{.Params.district}}{{end}}</code>          
-          <code style="">{{if .Params.region}}region: {{.Params.region}}{{end}}</code>                    
-          <code style="">{{if .Params.postcode}}postcode: {{.Params.postcode}}{{end}}</code>                              
+          <code style="">{{if .Params.level}}level: {{.Params.level | plainify}}{{end}}</code>  
+          <code style="">{{if .Params.road}}road: {{.Params.road | plainify}}{{end}}</code>                    
+          <code style="">{{if .Params.district}}district: {{.Params.district | plainify}}{{end}}</code>          
+          <code style="">{{if .Params.region}}region: {{.Params.region | plainify}}{{end}}</code>                    
+          <code style="">{{if .Params.postcode}}postcode: {{.Params.postcode | plainify}}{{end}}</code>                              
+          
           <code style="">{{if .Params.occupancy}}occupancy: {{.Params.occupancy}}{{end}}</code>                              
           <code style="">{{if .Params.furnished}}furnished: {{.Params.furnished}}{{end}}</code>                              
           <code style="">{{if .Params.furnishings}}furnishings: {{.Params.furnishings}}{{end}}</code>                                        
@@ -32,7 +35,7 @@
           <code style="">{{if .Params.connectivity}}connectivity: {{.Params.connectivity}}{{end}}</code>                                                  
           <code style="">{{if .Params.parking}}parking: {{.Params.parking}}{{end}}</code>                                                            
           <code style="">{{if .Params.details}}details: {{.Params.details}}{{end}}</code>                                                                   
-          <code style="">{{if .Params.level}}level: {{.Params.level}}{{end}}</code>
+
           <code style="">{{if .Params.facilities}}facilities: {{.Params.facilities}}{{end}}</code>                                                                       
           <hr />
           
